# soem-xenomai

./: CMakeLists.txt  README  package.xml
cmake/: FindXenomai.cmake
src/: CMakeLists.txt  Makefile  ethercatcoe.c  ethercatdc.c  main.c  nicdrv.c  nicdrv.h  osal.c
src/osal/: osal.h
src/osal/linux/: osal.c
src/osal/xenomai/: osal.c
src/oshw/xenomai/: nicdrv.c  nicdrv.h
src/soem/: ethercatconfig.c  ethercatdc.h  ethercatmain.c  ethercatmain.h
test/: CMakeLists.txt
test/linux/: CMakeLists.txt
test/linux/eepromtool/: CMakeLists.txt
test/linux/firm_update/: CMakeLists.txt
test/linux/red_test/: CMakeLists.txt
test/linux/simple_test/: CMakeLists.txt
test/linux/slaveinfo/: CMakeLists.txt
test/xenomai/: CMakeLists.txt
test/xenomai/slaveinfo/: CMakeLists.txt  slaveinfo.c
